--- a/PPMToolFullStack/src/main/resources/application.properties
+++ b/PPMToolFullStack/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
 
+spring.datasource.platform=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=create
+
+# show sql commands
+spring.jpa.show-sql=true
