--- a/PPMToolFullStack/src/main/resources/application.properties
+++ b/PPMToolFullStack/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
 
-spring.datasource.platform=h2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/ppmtool?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
 
-# Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-# show sql commands
-spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
